@@ -18,6 +18,7 @@ OPENSEADRAGON CHANGELOG
 * MouseTracker - added keydown and keyup handlers (#568)
 * Modifier keys ignored in keyboard navigation handlers (#503)
 * Arrow key navigation fixed across platforms (#565)
+* Removed textarea element from viewer DOM. Viewer.canvas now handles keyboard navigation
 
 1.2.0:
 
